# BPC-EL1

./: README.md  autor.txt
CV03/bourk/: CMakeLists.txt
CV03/bourk/bourk/: CMakeLists.txt  bourk.cpp  bourk.h
CV03/funkcmin/: CMakeLists.txt
CV03/funkcmin/funkcmin/: CMakeLists.txt  funkcmin.cpp  funkcmin.h
CV04/LeapYCheck/: CMakeLists.txt  LeapYCheck.cpp  LeapYCheck.h  isLeap.cpp  isLeap.h
CV06/charcount/: CMakeLists.txt  charcount.cpp  charcount.h  counter.cpp  counter.h
CV07/body/: CMakeLists.txt  body.cpp  body2d.cpp  body2d.h
CV08/: CMakeLists.txt  praz.cpp  praz.h  prunik.cpp  prunik.h
Projekt/: about.txt
Projekt/kontakty/: kontakty.txt
Projekt/kontakty/kontakty/: kontakty.cpp  kontakty.h  kontaktyDB.cpp  kontaktyDB.h
Projektpome/Projektpome/Projekt/: about.txt
Projektpome/Projektpome/Projekt/kontakty/: CMakeLists.txt  kontakty.txt
Projektpome/Projektpome/Projekt/kontakty/kontakty/: CMakeLists.txt  kontakty.cpp  kontaktyDB.cpp  kontaktyDB.h
